@@ -1,89 +1,80 @@
 package com.github.konarjg.BackendAPI.controller;
 
-import com.github.konarjg.BackendAPI.entity.*;
-import com.github.konarjg.BackendAPI.requestBody.OrderRequest;
-import com.github.konarjg.BackendAPI.service.*;
+import com.github.konarjg.BackendAPI.dto.ClientOrder;
+import com.github.konarjg.BackendAPI.dto.ClientOrderItem;
+import com.github.konarjg.BackendAPI.entity.Order;
+import com.github.konarjg.BackendAPI.entity.OrderItem;
+import com.github.konarjg.BackendAPI.entity.Product;
+import com.github.konarjg.BackendAPI.requestBody.CreateOrderBody;
+import com.github.konarjg.BackendAPI.service.OrderService;
+import com.github.konarjg.BackendAPI.service.ProductService;
+import com.github.konarjg.BackendAPI.service.UserService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.Random;
+import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/v1/orders")
+@RequestMapping("/api/orders")
+@CrossOrigin(origins = "http://localhost:3000")
 public class OrderController {
-    private final Random random = new Random();
-    private final OrderService orderService;
     private final ProductService productService;
-    private final LocationService locationService;
+    private final OrderService orderService;
     private final UserService userService;
 
-    public OrderController(OrderService orderService, ProductService productService, LocationService locationService, UserService userService) {
-        this.orderService = orderService;
+    public OrderController(ProductService productService, OrderService orderService, UserService userService) {
         this.productService = productService;
-        this.locationService = locationService;
+        this.orderService = orderService;
         this.userService = userService;
     }
 
-    @RequestMapping(method = RequestMethod.GET, path = "/fetch")
-    public ResponseEntity<List<Order>> fetchOrders() {
+    @GetMapping("/all")
+    public ResponseEntity<List<ClientOrder>> getAll() {
         List<Order> orders = orderService.findAll();
+        List<ClientOrder> clientOrders = orders.stream().map(o -> {
+            ClientOrder order = new ClientOrder();
+            order.setOrderId(o.getOrderId());
+            order.setStatus(o.getStatus());
+            order.setTotal(o.getTotal());
+            order.setProducts(o.getProducts().stream().map(p -> {
+                ClientOrderItem product = new ClientOrderItem();
+                product.setProductId(p.getProduct().getProductId());
+                product.setName(p.getProduct().getName());
+                product.setQuantity(p.getQuantity());
+                product.setImage(p.getProduct().getImage());
+                product.setPrice(p.getProduct().getPrice());
 
-        if (orders.isEmpty()) {
-            return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-        }
+                return product;
+            }).collect(Collectors.toList()));
 
-        return new ResponseEntity<>(orders, HttpStatus.OK);
+            return order;
+        }).collect(Collectors.toList());
+
+        return new ResponseEntity<>(clientOrders, HttpStatus.OK);
     }
 
-    @RequestMapping(method = RequestMethod.GET, path = "/fetch-with-emergency")
-    public ResponseEntity<List<Order>> fetchOrdersWithEmergency() {
-        List<Order> orders = orderService.findAllWithEmergency();
-
-        if (orders.isEmpty()) {
-            return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-        }
-
-        return new ResponseEntity<>(orders, HttpStatus.OK);
-    }
-
-    @RequestMapping(method = RequestMethod.POST, path = "/create")
-    public ResponseEntity<Void> createOrder(@RequestBody OrderRequest request) {
-        User user = userService.findByEmail(request.getUserEmail());
-        Location destination = locationService.findById(request.getDestinationId());
-        List<OrderItem> items = request.getItems().stream().map(i -> {
+    @PostMapping("/create")
+    public ResponseEntity<?> create(@RequestBody CreateOrderBody data) {
+        Order order = new Order();
+        order.setUser(userService.findByEmail(data.getEmail()).orElse(null));
+        order.setTotal(data.getTotal());
+        order.setStatus(Order.Status.PREPARING);
+        order.setProducts(data.getProducts().stream().map(p -> {
             OrderItem item = new OrderItem();
-            item.setProduct(productService.findById(i.getProductId()));
-            item.setQuantity(i.getQuantity());
+            item.setQuantity(p.getQuantity());
+            Product product = productService.findById(p.getProductId());
+            item.setProduct(product);
+            productService.decreaseStock(product.getProductId(), item.getQuantity());
 
             return item;
-        }).toList();
-
-        Order order = new Order();
-        order.setDestination(destination);
-        order.setItems(items);
-        order.setState(request.getState());
+        }).collect(Collectors.toList()));
 
         if (!orderService.save(order)) {
             return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
         }
 
         return new ResponseEntity<>(HttpStatus.CREATED);
-    }
-
-    @RequestMapping(method = RequestMethod.DELETE, path = "/delete/{orderId}")
-    public ResponseEntity<Void> deleteOrder(@RequestParam("orderId") long orderId) {
-        Order order = orderService.findById(orderId);
-
-        if (order == null) {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-        }
-
-        if (!orderService.delete(order)) {
-            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
-        }
-
-        return new ResponseEntity<>(HttpStatus.OK);
     }
 }
